--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,28 @@
+/* mobile styles */
+
 .header {
-  background-color: rgb(31, 134, 224);
+  background-color: var(--primary);
+  background-image: linear-gradient(45deg, var(--primary), #8cc5c1);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 2rem;
+  margin-bottom: 1rem;
 }
 
 .divItem {
   padding: 0 10px 0 10px;
+}
+
+/* small tablet styles */
+
+@media screen and (min-width: 620px) {
+}
+/* large tablet & small laptop styles */
+
+@media screen and (min-width: 960px) {
+}
+/* desktop styles */
+
+@media screen and (min-width: 1200px) {
 }
