--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,12 +2,23 @@
   background-image: linear-gradient(90deg, var(--primary), #8cc5c1);
   height: 2rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
+}
+.containerCopyright {
+  display: flex;
+  align-items: center;
+  margin: 0 0 0 0.5rem;
+}
+.containerIcons {
+  display: flex;
+  align-items: center;
+  margin: 0 0.5rem 0 0;
 }
 .icon {
   font-size: 1.5rem;
 }
 .copy {
   font-size: 1.5rem;
+  margin: 0 0.5rem 0 0;
 }
