--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,38 +1,47 @@
 .container {
-  margin: 1rem 0;
   display: flex;
   flex-direction: column;
 }
 .container > h3 {
+  /* font-size: 1.2em; */
   text-align: center;
   margin: 1rem 0;
 }
 
-.container > button {
-  border-radius: 5px;
-  border: none;
-  padding: 0.3rem;
-  background: rgba(255, 255, 255, 0.5);
-  align-self: flex-end;
-  margin-top: 0.5rem;
-}
-
 .link {
   margin: 0 auto;
-
   text-align: center;
-  background-color: rgba(235, 231, 231, 0.8);
+  background-color: var(--tertiary);
   border-radius: 10px;
   line-height: 1.2em;
   width: 90%;
+  padding: 0.5rem;
+  margin-top: 1rem;
+  transition: 0.5s ease;
 }
 
 .link:hover {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.3);
   transform: scale(1.1);
-  transition-duration: 0.3s;
 }
 
 .text {
   margin-bottom: 0.5rem;
+}
+
+@media screen and (min-width: 620px) {
+  .link {
+    width: 70%;
+  }
+}
+/* large tablet & small laptop styles */
+
+@media screen and (min-width: 960px) {
+  .link {
+    width: 70%;
+  }
+}
+/* desktop styles */
+
+@media screen and (min-width: 1200px) {
 }
