--- a/src/components/Body/Body.module.css
+++ b/src/components/Body/Body.module.css
@@ -1,12 +1,53 @@
 .container {
   padding: 0 1rem;
+  height: 100%;
+}
+.imgContainer {
+  /* padding: 1rem; */
+  position: relative;
 }
 .imgContainer > img {
   border-radius: 10px;
 }
 
 h1 {
-  /* padding: 0 1rem; */
+  position: absolute;
+  font-size: 18px;
+  text-justify: auto;
+  top: 10%;
+  left: 30%;
+
+  color: rgb(214 223 227);
   letter-spacing: 0.08em;
   text-align: center;
+  /* padding: 1rem; */
+}
+
+@media screen and (min-width: 620px) {
+  h1 {
+    font-size: 32px;
+  }
+}
+/* large tablet & small laptop styles */
+
+@media screen and (min-width: 960px) {
+  h1 {
+    padding: 1rem;
+    font-size: 32px;
+  }
+
+  .imgContainer {
+    padding: 1rem;
+  }
+}
+/* desktop styles */
+
+@media screen and (min-width: 1200px) {
+  /* h1 {
+    padding: 1rem;
+  } */
+
+  /* .imgContainer {
+    padding: 1rem;
+  } */
 }
