--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
 
 .header {
   background-color: var(--primary);
-  background-image: linear-gradient(45deg, var(--primary), #8cc5c1);
+  /* background-image: linear-gradient(45deg, var(--primary), #8cc5c1); */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,7 +11,8 @@
 }
 
 .divItem {
-  padding: 0 10px 0 10px;
+  padding: 1rem;
+  font-weight: 700;
 }
 
 /* small tablet styles */
@@ -21,6 +22,9 @@
 /* large tablet & small laptop styles */
 
 @media screen and (min-width: 960px) {
+  .divItem {
+    /* padding: 1rem; */
+  }
 }
 /* desktop styles */
 
