--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,10 @@ body {
 }
 
 :root {
-  --primary: rgb(31, 134, 224);
-  --secondary: #3678cc;
+  --primary: rgb(234, 226, 183);
+  --secondary: rgb(0, 48, 73);
+  --tertiary: rgb(247, 127, 0);
+  --quarto: rgb(234, 226, 183);
 }
 
 /* RESET */
@@ -25,8 +27,6 @@ img {
 }
 
 body {
-  /* background-image: linear-gradient(127deg, #2ba19a, #8cc5c1); */
-  /* font-family: "Open Sans", sans-serif; */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Open Sans", "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
