--- a/src/utils/Card.module.css
+++ b/src/utils/Card.module.css
@@ -1,9 +1,9 @@
 .card {
-  background-color: rgba(214, 220, 221, 0.3);
+  background-color: var(--primary);
   border-radius: 10px;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
   /* height: calc(100% + 2rem); */
   width: auto;
   padding: 1rem;
-  margin: 1rem 0;
+  margin: 1rem;
 }
