--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,9 +10,16 @@
   margin-bottom: 1rem;
 }
 
-.divItem {
+.inactive {
   padding: 1rem;
   font-weight: 700;
+  overflow: hidden;
+}
+.active {
+  background-color: rgba(0, 47, 73, 0.205);
+  padding: 1rem;
+  font-weight: 700;
+  overflow: hidden;
 }
 
 /* small tablet styles */
@@ -22,9 +29,6 @@
 /* large tablet & small laptop styles */
 
 @media screen and (min-width: 960px) {
-  .divItem {
-    /* padding: 1rem; */
-  }
 }
 /* desktop styles */
 
