--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,10 +1,16 @@
 .container {
   /* background-image: linear-gradient(90deg, var(--primary), #8cc5c1); */
   background-color: var(--primary);
-  height: 2rem;
+  /* min-height: 50px; */
+  min-height: 50px;
+  margin-top: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: auto;
+  /* position: absolute;
+  bottom: 0;
+  width: 100%; */
 }
 .containerCopyright {
   display: flex;
