--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -6,3 +6,18 @@
   text-align: center;
   margin: 1rem 0;
 }
+.containerIcons {
+  display: flex;
+  align-self: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.containerIcon {
+  display: flex;
+  margin-top: 0.5rem;
+}
+.containerIcon:hover {
+}
+.icon {
+  font-size: 1.5rem;
+}
