--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -17,7 +17,7 @@
   overflow: hidden;
 }
 .active {
-  background-color: rgba(0, 47, 73, 0.205);
+  background-color: #2b6d99e5;
   padding: 1rem;
   font-weight: 700;
   overflow: hidden;
