--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -26,6 +26,9 @@
   display: block;
   border-radius: 10px;
 }
+.detailDescription {
+  margin-top: 1rem;
+}
 
 @media screen and (min-width: 620px) {
   .listItem {
