--- a/src/components/Stack/Stack.module.css
+++ b/src/components/Stack/Stack.module.css
@@ -18,6 +18,7 @@
 }
 .listItem > p {
   line-height: 25px;
+  margin-left: 0.2rem;
 }
 
 .title {
@@ -25,6 +26,13 @@
 }
 .icon {
   font-size: 1.5em;
+}
+
+.textContainer {
+  background-color: aliceblue;
+}
+.textContainer > p {
+  padding: 1rem;
 }
 
 @media screen and (min-width: 620px) {
