--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,5 +1,17 @@
 .title {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
+  font-size: 20px;
+}
+
+.detailTitle {
+  font-size: 22px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  margin: 1rem 0;
+}
+
+.detailTitle ~ div {
+  margin-top: 0;
 }
 
 .text {
