--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,7 +1,10 @@
 .title {
   margin-bottom: 1rem;
-  font-size: 20px;
+  /* font-size: 20px; */
 }
+/* .text {
+
+} */
 
 .detailTitle {
   font-size: 22px;
@@ -16,4 +19,12 @@
 
 .text {
   margin-bottom: 0.5rem;
+  text-align: left;
+}
+.section {
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  padding: 1rem;
+  margin-bottom: 1rem;
 }
