--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,9 @@
 /* mobile styles */
 
 .header {
-  background-color: var(--primary);
+  /* background-color: var(--primary); */
   /* background-image: linear-gradient(45deg, var(--primary), #8cc5c1); */
+  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,8 +11,17 @@
   min-height: 50px;
   margin-bottom: 1rem;
 }
+.containerLinks {
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+  display: none;
+  padding: 1rem;
+}
 
 .inactive {
+  border-radius: 5px;
   padding: 1rem;
   font-weight: 700;
   overflow: hidden;
@@ -27,6 +37,7 @@
 .active {
   background-color: #2b6d99e5;
   padding: 1rem;
+  border-radius: 5px;
   opacity: 0.8;
   font-weight: 700;
   overflow: hidden;
@@ -35,6 +46,9 @@
 /* small tablet styles */
 
 @media screen and (min-width: 620px) {
+  .logo {
+    display: block;
+  }
 }
 /* large tablet & small laptop styles */
 
