--- a/src/utils/Card.module.css
+++ b/src/utils/Card.module.css
@@ -3,9 +3,10 @@
   border-radius: 10px;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
   /* height: calc(100% + 2rem); */
-  width: auto;
+  width: 90%;
   padding: 1rem;
-  margin: 4rem 1rem;
+  margin: 0 auto;
+  margin-bottom: 1rem;
   display: flex;
   flex-direction: column;
   text-align: center;
