Removed pointer events to title subtitle to avoid unexpected behaviour

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -29,7 +29,7 @@
   width: 18rem;
   line-height: 2;
   transform: translate3d(0%, -100%, 0);
-
+  pointer-events: none;
   opacity: 0;
 }
 
@@ -40,6 +40,7 @@
   width: 18rem;
   line-height: 2;
   transform: translate3d(0%, 0%, 0);
+  pointer-events: none;
 }
 
 .section_hide {
