refactored UI, colors and styles on main page only

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,6 @@
 .app {
-  background-image: linear-gradient(180deg, #003049, #2b6d99);
+  /* background-image: linear-gradient(180deg, #003049, #2b6d99); */
+  background-color: var(--primary);
   background-repeat: no-repeat;
   min-height: 100vh;
   display: flex;
