--- a/src/components/Stack/Stack.module.css
+++ b/src/components/Stack/Stack.module.css
@@ -1,3 +1,6 @@
+.container {
+  background-color: white;
+}
 .title {
   margin-bottom: 0.5rem;
   font-size: 20px;
@@ -23,12 +26,12 @@
   display: flex;
   justify-content: center;
   /* align-items: center; */
-  background-color: rgba(38, 70, 83, 0.568);
+  /* background-color: rgba(38, 70, 83, 0.568); */
   padding: 1rem;
   margin-bottom: 0.5rem;
   /* line-height: 15px; */
   border-radius: 10px;
-  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.233);
+  /* box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.233); */
   /* box-shadow: 1px 2px rgba(66, 65, 65, 0.328); */
 }
 
