--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -10,13 +10,13 @@
   min-height: 250px;
   margin-bottom: 1rem;
   transition: all 0.3s;
-  opacity: 0.7;
+  opacity: 0.8;
   cursor: pointer;
 }
 
-.hide {
+/* .hide {
   display: none;
-}
+} */
 
 .section:hover {
   opacity: 1;
@@ -70,8 +70,8 @@
 }
 
 .detailTitle {
-  font-size: 22px;
-  color: rgb(255, 255, 255);
+  /* font-size: 22px; */
+  /* color: rgb(255, 255, 255); */
   text-align: center;
   margin: 1rem 0;
 }
