--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,15 +3,24 @@
 .header {
   background-color: var(--secondary);
 
-  /* background-image: linear-gradient(45deg, var(--primary), #8cc5c1); */
-  /* color: white; */
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  /* min-height: 50px; */
   min-height: 50px;
   margin-bottom: 1rem;
+}
+
+.mask {
+  z-index: 1;
+  background-color: rgb(0, 0, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  overflow: hidden;
 }
 
 .largeScreen {
@@ -35,12 +44,13 @@
   z-index: 100;
 }
 .logo {
-  /* display: none; */
   padding: 1rem;
   padding-left: 2rem;
 }
 
 .inactive {
+  width: fit-content;
+  margin-left: auto;
   border-radius: 5px;
   padding: 1rem;
   font-weight: 700;
@@ -48,6 +58,7 @@
   transition: 0.5s ease;
 }
 .inactive:hover {
+  width: fit-content;
   background-color: var(--tertiary);
   padding: 1rem;
   opacity: 0.8;
@@ -55,6 +66,8 @@
   overflow: hidden;
 }
 .active {
+  margin-left: auto;
+  width: fit-content;
   background-color: var(--tertiary);
   padding: 1rem;
   border-radius: 5px;
@@ -69,26 +82,15 @@
   .logo {
     display: block;
   }
-  /* .openMenu {
-    display: none;
-  } */
 }
 /* large tablet & small laptop styles */
 
 @media screen and (min-width: 768px) {
-  .more {
-    display: none;
-  }
-  .openMenu {
-    display: block;
-    width: auto;
-    height: auto;
-  }
-  .close {
-    display: none;
-  }
   .largeScreen {
     display: block;
+  }
+  .menu {
+    display: none;
   }
 }
 /* desktop styles */
