--- a/src/utils/Card.module.css
+++ b/src/utils/Card.module.css
@@ -5,6 +5,7 @@
   /* height: calc(100% + 2rem); */
   /* width: 90%; */
   padding: 1rem;
+  /* background-color: var(--primary); */
   /* margin: 0 auto; */
   /* margin-bottom: 1rem; */
   display: flex;
