--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -2,6 +2,10 @@
   margin-bottom: 0.5rem;
   font-size: 20px;
 }
+.container {
+  background-color: var(--primary);
+  padding: 1rem;
+}
 .linkTitle {
   text-align: center;
   margin-bottom: 0.5rem;
@@ -49,7 +53,7 @@
 
 @media screen and (min-width: 620px) {
   .listItem {
-    width: 50%;
+    width: 100%;
   }
 }
 /* large tablet & small laptop styles */
@@ -60,7 +64,7 @@
   } */
   .listContainer {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
   .listItem {
     width: 100%;
