--- a/src/components/Stack/Stack.module.css
+++ b/src/components/Stack/Stack.module.css
@@ -6,10 +6,8 @@
   font-size: 20px;
 }
 .detailTitle {
-  font-size: 22px;
-  color: rgb(255, 255, 255);
   text-align: center;
-  margin: 1rem 0;
+  padding: 1rem;
 }
 
 .detailTitle ~ div {
