--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -1,17 +1,8 @@
 .container {
-  padding: 0 1rem;
-  height: 100%;
-  margin-bottom: 1rem;
-}
-.imgContainer {
-  /* padding: 1rem; */
-  position: relative;
-}
-.imgContainer > img {
-  border-radius: 10px;
+  background-color: var(--primary);
 }
 
 .typewriter {
-  letter-spacing: 0.08em;
+  /* letter-spacing: 0.08em; */
   text-align: center;
 }
