--- a/src/components/Stack/Stack.module.css
+++ b/src/components/Stack/Stack.module.css
@@ -1,6 +1,55 @@
 .container {
   background-color: white;
+  padding: 3rem 0;
+  position: relative;
+  background-color: var(--primary);
 }
+
+/* Divider stack list*/
+
+.custom-shape-divider-top-1647591263 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1647591263 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 100px;
+}
+
+.custom-shape-divider-top-1647591263 .shape-fill {
+  fill: white;
+}
+
+/* Divider stack detail*/
+
+.custom-shape-divider-bottom-1647593320 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1647593320 svg {
+  position: relative;
+  display: block;
+  width: calc(135% + 1.3px);
+  height: 100px;
+}
+
+.custom-shape-divider-bottom-1647593320 .shape-fill {
+  fill: #ffffff;
+}
+
 .title {
   margin-bottom: 0.5rem;
   font-size: 20px;
@@ -47,11 +96,13 @@
   /* background-color: aliceblue; */
   margin-top: 1rem;
   text-align: start;
-}
-.textContainer {
   padding: 1rem;
-  /* display: flex;
-  flex-direction: column; */
+}
+.textContainer li {
+  list-style-type: disc;
+}
+.textContainer ul {
+  padding: 1rem;
 }
 
 @media screen and (min-width: 620px) {
