--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -7,11 +7,6 @@
   padding: 4rem 0;
   position: relative;
 }
-.containerDetail {
-  background-color: white;
-  padding: 4rem 0;
-  position: relative;
-}
 
 /* shape divider 1*/
 
@@ -58,79 +53,121 @@
   fill: #ffffff;
 }
 
-.linkTitle {
-  text-align: center;
-  margin-bottom: 0.5rem;
-}
-.detailTitle {
-  text-align: center;
-  margin: 1rem 0;
-}
 
-.detailTitle ~ div {
-  margin-top: 0;
-}
 
 .container > h3 {
   text-align: center;
 }
 
-.listContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
 
-.listItem {
-  padding: 0.5rem;
-  transition: 0.5s;
-}
 
-.listItem:hover {
-  opacity: 0.5;
-}
-
-.itemImg {
-  max-width: 100%;
-  height: auto;
-  margin: 0 auto;
-  display: block;
-  border-radius: 10px;
-  box-shadow: 1px 2px 4px rgba(32, 31, 31, 0.2);
-}
-.detailDescription {
-  margin-top: 1rem;
-  text-align: left;
-  color: var(--primary);
-}
-.detailText {
-  color: initial;
-}
 
 .iconContainer {
   font-size: 5rem;
 }
 
-@media screen and (min-width: 620px) {
-  .listItem {
-    width: 100%;
-  }
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap:1rem;
 }
+
+
+.gridContainer > div > a> img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  /* border-radius: 10px; */
+  box-shadow: 1px 2px 4px rgba(32, 31, 31, 0.4);
+  
+}
+.gridContainer > div > a > img:hover {
+  opacity: 0.5;
+  transition-duration: 0.3s;
+}
+
+
+
+/* DETAIL SECTION*/
+
+.detailTitle {
+  text-align: center;
+  margin: 1rem 0;
+
+}
+.containerDetail {
+
+display: flex;
+flex-wrap: wrap;
+gap: 1rem;
+
+}
+.listItem {
+  display: grid;
+  grid-template-columns: repeat(2 ,1fr);
+  gap: 1rem;
+  padding: 1rem;
+
+}
+
+.itemImg {
+height: 100%;
+width: 100%;
+object-fit: cover;
+
+box-shadow: 1px 2px 4px rgba(32, 31, 31, 0.5);
+}
+.itemImg > img {
+  /* border-radius: 10px; */
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+
+.linkTitle {
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+
+.detailDescription {
+  margin-bottom: 0.5rem;
+  
+  color: var(--primary); 
+}
+
+.detailText {
+  
+    margin-bottom: 0.5rem;
+  
+  
+}
+
+
 /* large tablet & small laptop styles */
 
 @media screen and (min-width: 960px) {
-  /* .listItem {
-    width: 33.3%;
-  } */
+
   .listContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
-  .listItem {
-    width: 100%;
-  }
+
+ 
+}
+
+@media screen and (max-width: 960px) {
+    .gridContainer {
+      grid-template-columns: repeat(1, 1fr);
+    }
 }
 /* desktop styles */
 
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 1200px) {
+
+ .listItem {
+   grid-template-columns: repeat(1, 1fr);
+ }
+
 }
