--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -2,7 +2,7 @@
   margin-bottom: 1rem;
 }
 .container {
-  /* background-color: var(--primary); */
+  background-color: var(--primary);
 }
 
 .section {
@@ -105,11 +105,6 @@
   max-width: 30%;
   text-shadow: 1px 1px 2px var(--primary);
 }
-
-.motion {
-  /* grid-column: 1/2; */
-}
-
 
 @media screen and (min-width: 992px) {
   .section {
