--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 /* mobile styles */
 
 .header {
-  background-color: var(--secondary);
+  background-color: var(--secondary-color-bg);
 
   display: flex;
   justify-content: space-between;
@@ -36,7 +36,8 @@
   position: absolute;
   top: 0;
   right: 0;
-  background-color: var(--secondary);
+  background-color: var(--secondary-color-bg);
+  color: var(--primary-color-font);
   height: 100%;
   width: 40%;
   text-align: right;
@@ -59,7 +60,8 @@
 }
 .inactive:hover {
   width: 100%;
-  border-bottom: var(--tertiary) 3px solid;
+  border-bottom: var(--tertiaty-color-font) 3px solid;
+  color: var(--tertiary-color-font);
   padding: 1rem;
   opacity: 1;
   font-weight: 700;
@@ -67,7 +69,8 @@
 }
 .inactive:focus {
   width: 100%;
-  background-color: var(--tertiary);
+  background-color: var(--tertiaty-color-font);
+  color: var(--tertiaty-color-font);
   padding: 1rem;
   opacity: 1;
   font-weight: 700;
@@ -76,7 +79,8 @@
 .active {
   margin-left: auto;
   width: 100%;
-  border-bottom: var(--tertiary) 3px solid;
+  border-bottom: var(--tertiaty-color-font) 3px solid;
+  color: var(--tertiaty-color-font);
   padding: 1rem;
   opacity: 1;
   font-weight: 700;
@@ -122,7 +126,9 @@
     margin-right: 0.1rem;
   }
   .inactive:hover {
-    background-color: var(--tertiary);
+    background-color: var(--tertiary-color-bg);
+    color: var(--tertiaty-color-font);
+
     padding: 1.5rem;
     min-width: 8rem;
     opacity: 1;
@@ -133,7 +139,9 @@
   .active {
     margin-left: auto;
     min-width: 8rem;
-    background-color: var(--tertiary);
+    background-color: var(--tertiary-color-bg);
+    color: var(--tertiaty-color-font);
+
     padding: 1.5rem;
     border-radius: 5px;
     opacity: 1;
