--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -148,3 +148,15 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
+:global(.slick-prev),
+:global(.slick-next) {
+  z-index: 1;
+}
+
+:global(.slick-prev) {
+  left: -15px; /* Adjust this value */
+}
+
+:global(.slick-next) {
+  right: -15px; /* Adjust this value */
+}
